--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "@project-serum/anchor": "^0.18.0",
     "@project-serum/anchor-cli": "^0.18.0",
     "@project-serum/common": "^0.0.1-beta.3",
-    "quicktype-core": "^6.0.70"
+    "quicktype-core": "^6.0.70",
+    "@metaplex/js": "^3.0.0"
   },
   "devDependencies": {
     "chai": "^4.3.4",
