--- a/Anchor.toml
+++ b/Anchor.toml
@@ -1,12 +1,14 @@
 [programs.localnet]
 nft_staking = "Fg6PaFpoGXkYsidMpWTK6W2BeZ7FEfcYkg476zPFsLnS"
+metaplex_token_metadata = "metaqbxxUerdq28cj1RbAWkYQm3ybzjb6a8bt518x1s"
+metaplex_token_vault = "vau1zxA2LbssAUEF7Gpw91zMM1LvXrvpzJtmZ58rPsn"
 
 [registry]
 url = "https://anchor.projectserum.com"
 
 [provider]
 cluster = "localnet"
-wallet = "/Users/admin/.config/solana/id.json"
+wallet = "~/.config/solana/id.json"
 
 [scripts]
-test = "ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
+test = "ts-mocha --debug -p ./tsconfig.json -t 1000000 tests/**/*.ts"
