--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
   "dependencies": {
+    "@metaplex/js": "^3.0.0",
     "@project-serum/anchor": "^0.18.0",
     "@project-serum/anchor-cli": "^0.18.0",
     "@project-serum/common": "^0.0.1-beta.3",
-    "quicktype-core": "^6.0.70",
-    "@metaplex/js": "^3.0.0"
+    "quicktype-core": "^6.0.70"
   },
   "devDependencies": {
+    "@solana/spl-token": "^0.1.8",
+    "@solana/web3.js": "^1.21.0",
+    "@types/expect": "^24.3.0",
+    "@types/mocha": "^9.0.0",
     "chai": "^4.3.4",
     "mocha": "^9.0.3",
     "ts-mocha": "^8.0.0",
     "ts-node": "^10.2.1",
-    "@types/mocha": "^9.0.0",
-    "typescript": "^4.3.5",
-    "@solana/spl-token": "^0.1.8",
-    "@solana/web3.js": "^1.21.0"
+    "typescript": "^4.3.5"
   }
 }
