--- a/programs/nft-staking/Cargo.toml
+++ b/programs/nft-staking/Cargo.toml
@@ -18,4 +18,4 @@ default = []
 anchor-lang = "0.18.0"
 anchor-spl = "0.18.0"
 spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
-metaplex-token-metadata = {  version = "0.0.1", features = ["no-entrypoint"] }
+metaplex-token-metadata = {  path = "../token-metadata", version = "0.0.1", features = ["no-entrypoint"] }
