--- a/programs/nft-staking/Cargo.toml
+++ b/programs/nft-staking/Cargo.toml
@@ -14,6 +14,10 @@ no-idl = []
 cpi = ["no-entrypoint"]
 default = []
 
+#add to default for local testing
+#default = ["local-testing"]
+local-testing = []
+
 [dependencies]
 anchor-lang = "0.18.0"
 anchor-spl = "0.18.0"
