--- a/programs/nft-staking/Cargo.toml
+++ b/programs/nft-staking/Cargo.toml
@@ -12,14 +12,13 @@ name = "nft_staking"
 no-entrypoint = []
 no-idl = []
 cpi = ["no-entrypoint"]
-default = []
 
 #add to default for local testing
-#default = ["local-testing"]
+default = ["local-testing"]
 local-testing = []
 
 [dependencies]
 anchor-lang = "0.19.0"
 anchor-spl = "0.19.0"
-spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
+spl-token = { version = "3.3.0", features = ["no-entrypoint"] }
 metaplex-token-metadata = {  path = "../token-metadata", version = "0.0.1", features = ["no-entrypoint"] }
