--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mocha": "^9.0.3",
     "ts-mocha": "^8.0.0",
     "ts-node": "^10.2.1",
+    "dayjs": "^1.10.7",
     "typescript": "^4.3.5"
   }
 }
