update: metaplex_metadata_program submodule

--- a/programs/nft-staking/Cargo.toml
+++ b/programs/nft-staking/Cargo.toml
@@ -21,4 +21,4 @@ local-testing = []
 anchor-lang = "0.19.0"
 anchor-spl = "0.19.0"
 spl-token = { version = "3.3.0", features = ["no-entrypoint"] }
-metaplex-token-metadata = {  path = "../token-metadata", version = "0.0.1", features = ["no-entrypoint"] }
+metaplex-token-metadata = {  version = "0.0.1", features = ["no-entrypoint"] }
