--- a/Anchor.toml
+++ b/Anchor.toml
@@ -15,4 +15,4 @@ test = "ts-mocha --debug -p ./tsconfig.json -t 1000000 tests/**/*.ts"
 
 [[test.genesis]]
 address = "metaqbxxUerdq28cj1RbAWkYQm3ybzjb6a8bt518x1s"
-program = "./deps/metaplex/rust/target/deploy/metaplex_token_metadata.so"
+program = "./deps/metadata.so"
