--- a/programs/nft-staking/Cargo.toml
+++ b/programs/nft-staking/Cargo.toml
@@ -16,6 +16,7 @@ cpi = ["no-entrypoint"]
 #add to default for local testing
 default = ["local-testing"]
 local-testing = []
+aurorynet = []
 
 [dependencies]
 anchor-lang = "0.19.0"
